--- a/SocialMedia/src/main/resources/application.properties
+++ b/SocialMedia/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=database
+
+# PostgreSQL datasource configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/training_database
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+# Hibernate dialect for PostgreSQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto
+spring.jpa.hibernate.ddl-auto=update
