--- a/SocialMedia/pom.xml
+++ b/SocialMedia/pom.xml
@@ -55,6 +55,10 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>2.0.13</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jdbc</artifactId>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
@@ -85,5 +89,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
