Improved the Code

--- a/SocialMedia/src/main/resources/application.properties
+++ b/SocialMedia/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=database
 
+logging.level.root=INFO
+logging.level.com.training.database=DEBUG
+
 # PostgreSQL datasource configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/training_database
 spring.datasource.username=postgres
